<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="30sp"
        android:id="@+id/title_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginBottom="20dp"
        android:id="@+id/main_layout_1"

        app:layout_constraintBottom_toTopOf="@id/main_layout_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="18sp"
            android:id="@+id/email_textview" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@color/light_gray"
            android:id="@+id/email_edittext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/password_edittext"
            android:paddingHorizontal="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginBottom="25dp"
        android:id="@+id/main_layout_2"

        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textSize="18sp"
            android:id="@+id/password_textview"
/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@color/light_gray"
            android:id="@+id/password_edittext"
            android:inputType="textPassword"
            android:nextFocusDown="@id/login_button"
            android:paddingHorizontal="10dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_click"
                android:textSize="16sp"
                android:textColor="@color/link_blue"
                android:id="@+id/register_click"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:paddingVertical="15dp"
        android:layout_marginBottom="20dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>