<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahEditWarung">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:id="@+id/clickable_pic"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ic_baseline_photo_camera_24"
            android:id="@+id/pictureView"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/namawarung_layout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickable_pic"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_warung"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@color/light_gray"
            android:id="@+id/namawarung_edittext"
            android:inputType="text"
            android:nextFocusDown="@id/coord_button"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/koordinat_layout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namawarung_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/koordinat"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@color/light_gray"
                android:id="@+id/koordinat_edittext"
                android:paddingHorizontal="10dp"
                android:layout_marginEnd="25dp"
                />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_baseline_album_24"
                android:id="@+id/coord_button"
                >

            </ImageView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/alamat_layout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/koordinat_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="280dp"
            android:layout_height="150dp"
            android:background="@color/light_gray"
            android:id="@+id/alamat_edittext"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:nextFocusDown="@id/submit_button"
            android:layout_gravity="start"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit_button"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alamat_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>