<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailWarung">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/dark_gray"
        android:id="@+id/clickable_pic"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/namawarung_layout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickable_pic"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_warung"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@color/light_gray"
            android:id="@+id/namawarung_textview"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/koordinat_layout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namawarung_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/koordinat"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@color/light_gray"
            android:id="@+id/koordinat_textview"
            android:paddingHorizontal="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/alamat_layout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/koordinat_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="280dp"
            android:layout_height="150dp"
            android:background="@color/light_gray"
            android:id="@+id/alamat_textview"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        android:id="@+id/edit_fab"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.9"
        />


</androidx.constraintlayout.widget.ConstraintLayout>